--- a/android/app/src/main/res/xml/backup_rules.xml
+++ b/android/app/src/main/res/xml/backup_rules.xml
@@ -4,6 +4,6 @@
         <exclude domain="sharedpref" path="." />
     </cloud-backup>
     <device-transfer>
-        <include domain="sharedpref" path="." />
+        <exclude domain="sharedpref" path="." />
     </device-transfer>
 </data-extraction-rules>
